--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -1,2 +1,11 @@
+body {
+    position: relative;
+    font-family: 'Lato', "PingFang SC", "Microsoft YaHei", sans-serif;
+    font-size: 14px;
+    line-height: 2;
+    color: #555;
+    background: #222;
+    background-image: url('http://pbhb4py13.bkt.clouddn.com/wallls.com_198521.png');
+}
 
 
